[gd_scene load_steps=21 format=2]

[ext_resource path="res://files/scenes/village/CraftPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/images/iconsitems/Wood.png" type="Texture" id=2]
[ext_resource path="res://assets/images/iconsgear/arron_weapon1_1.png" type="Texture" id=3]
[ext_resource path="res://assets/themes/button_forge.tres" type="Theme" id=4]
[ext_resource path="res://assets/images/gui/forge/panel_forge_portrait_back.png" type="Texture" id=5]
[ext_resource path="res://assets/images/gui/forge/panel_forge_portrait.png" type="Texture" id=6]
[ext_resource path="res://assets/images/gui/forge/panel_forge_portrait_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/images/portrait/ArronNormal.png" type="Texture" id=8]
[ext_resource path="res://assets/images/gui/forge/panel_forge_portrait_hover.png" type="Texture" id=9]
[ext_resource path="res://assets/fonts/pt_24.tres" type="DynamicFont" id=10]
[ext_resource path="res://assets/fonts/pt_30.tres" type="DynamicFont" id=11]
[ext_resource path="res://assets/images/gui/forge/panel_forge_big.png" type="Texture" id=12]
[ext_resource path="res://assets/fonts/pt_36_boldshad.tres" type="DynamicFont" id=13]
[ext_resource path="res://assets/images/gui/forge/panel_forge_resources.png" type="Texture" id=14]
[ext_resource path="res://assets/images/gui/forge/panel_forge_gear.png" type="Texture" id=15]
[ext_resource path="res://assets/images/gui/forge/panel_forge_gear_disabled.png" type="Texture" id=16]
[ext_resource path="res://assets/images/gui/forge/panel_forge_gear_pressed.png" type="Texture" id=17]
[ext_resource path="res://assets/fonts/pt_20.tres" type="DynamicFont" id=18]
[ext_resource path="res://files/scenes/GearTooltip.tscn" type="PackedScene" id=19]
[ext_resource path="res://files/scenes/village/forge_portrait.gd" type="Script" id=20]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 360.0
margin_top = 30.0
margin_right = -360.0
margin_bottom = -30.0
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_left = 452.0
margin_top = 16.0
margin_right = 748.0
margin_bottom = 67.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 13 )
text = "Forge"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
margin_left = 74.0
margin_top = 97.0
margin_right = -74.0
margin_bottom = 210.0
scroll_horizontal_enabled = false
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer"]
margin_left = 451.0
margin_right = 601.0
margin_bottom = 210.0
size_flags_horizontal = 6
custom_constants/separation = 30

[node name="panel" type="TextureButton" parent="Panel/ScrollContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 210.0
rect_min_size = Vector2( 150, 150 )
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )
script = ExtResource( 20 )

[node name="TextureRect2" type="TextureRect" parent="Panel/ScrollContainer/HBoxContainer/panel"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel/ScrollContainer/HBoxContainer/panel"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -15.0
margin_bottom = -15.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
custom_fonts/font = ExtResource( 10 )
text = "Arron"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapon1" type="TextureButton" parent="Panel"]
margin_left = 92.0
margin_top = 400.0
margin_right = 352.0
margin_bottom = 927.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 6
toggle_mode = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 17 )
texture_disabled = ExtResource( 16 )

[node name="Icon" type="TextureRect" parent="Panel/weapon1"]
margin_left = 0.729553
margin_top = 39.1892
margin_right = 250.73
margin_bottom = 289.189
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel/weapon1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -111.5
margin_top = -56.0
margin_right = 111.5
theme = ExtResource( 4 )
text = "Upgrade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/weapon1"]
anchor_right = 1.0
margin_top = 11.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 11 )
text = "Level 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel/weapon1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -237.0
margin_bottom = -197.0
grow_vertical = 0
custom_fonts/font = ExtResource( 11 )
text = "Broad Sword"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResPanel" type="TextureRect" parent="Panel/weapon1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -187.0
margin_right = 100.0
margin_bottom = -87.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="Panel/weapon1"]
margin_left = 31.0
margin_top = 340.0
margin_right = 230.0
margin_bottom = 440.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="TextureRect" parent="Panel/weapon1/VBoxContainer"]
margin_right = 199.0
margin_bottom = 100.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3

[node name="icon" type="TextureRect" parent="Panel/weapon1/VBoxContainer/button"]
margin_right = 97.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/weapon1/VBoxContainer/button"]
margin_left = 5.0
margin_top = 68.0
margin_right = 90.0
margin_bottom = 95.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 18 )
text = "50/100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapon2" type="TextureButton" parent="Panel"]
margin_left = 428.0
margin_top = 400.0
margin_right = 688.0
margin_bottom = 927.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 6
toggle_mode = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 17 )
texture_disabled = ExtResource( 16 )

[node name="Icon" type="TextureRect" parent="Panel/weapon2"]
margin_left = 0.729553
margin_top = 39.1892
margin_right = 250.73
margin_bottom = 289.189
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel/weapon2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -111.5
margin_top = -56.0
margin_right = 111.5
theme = ExtResource( 4 )
text = "Upgrade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/weapon2"]
anchor_right = 1.0
margin_top = 11.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 11 )
text = "Level 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel/weapon2"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -237.0
margin_bottom = -197.0
grow_vertical = 0
custom_fonts/font = ExtResource( 11 )
text = "Broad Sword"
align = 1
autowrap = true

[node name="ResPanel" type="TextureRect" parent="Panel/weapon2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -187.0
margin_right = 100.0
margin_bottom = -87.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="Panel/weapon2"]
margin_left = 31.0
margin_top = 340.0
margin_right = 230.0
margin_bottom = 440.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="TextureRect" parent="Panel/weapon2/VBoxContainer"]
margin_right = 199.0
margin_bottom = 100.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3

[node name="icon" type="TextureRect" parent="Panel/weapon2/VBoxContainer/button"]
margin_right = 97.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/weapon2/VBoxContainer/button"]
margin_left = 5.0
margin_top = 68.0
margin_right = 90.0
margin_bottom = 95.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 18 )
text = "50/100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="armor" type="TextureButton" parent="Panel"]
margin_left = 844.0
margin_top = 400.0
margin_right = 1104.0
margin_bottom = 927.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 6
toggle_mode = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 17 )
texture_disabled = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Panel/armor"]
margin_left = 0.729553
margin_top = 39.1892
margin_right = 250.73
margin_bottom = 289.189
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel/armor"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -111.5
margin_top = -56.0
margin_right = 111.5
theme = ExtResource( 4 )
text = "Upgrade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/armor"]
anchor_right = 1.0
margin_top = 11.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 11 )
text = "Level 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel/armor"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -237.0
margin_bottom = -197.0
grow_vertical = 0
custom_fonts/font = ExtResource( 11 )
text = "Broad Sword"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResPanel" type="TextureRect" parent="Panel/armor"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -187.0
margin_right = 100.0
margin_bottom = -87.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="Panel/armor"]
margin_left = 31.0
margin_top = 340.0
margin_right = 230.0
margin_bottom = 440.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="TextureRect" parent="Panel/armor/VBoxContainer"]
margin_right = 199.0
margin_bottom = 100.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3

[node name="icon" type="TextureRect" parent="Panel/armor/VBoxContainer/button"]
margin_right = 97.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/armor/VBoxContainer/button"]
margin_left = 5.0
margin_top = 68.0
margin_right = 90.0
margin_bottom = 95.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 18 )
text = "50/100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" parent="." instance=ExtResource( 19 )]
margin_left = 7.0
margin_top = 431.0
margin_right = 447.0
margin_bottom = 593.0
